Audio switcher hack

--- a/Hyddan.html
+++ b/Hyddan.html
@@ -30,6 +30,7 @@
     <script src="src/streaming/extensions/RequestModifierExtensions.js"></script>
     <script src="src/streaming/models/VideoModel.js"></script>
     <script src="src/streaming/vo/FragmentRequest.js"></script>
+    <script src="src/streaming/vo/BitrateInfo.js"></script>
     <script src="src/streaming/vo/TrackInfo.js"></script>
     <script src="src/streaming/vo/MediaInfo.js"></script>
     <script src="src/streaming/vo/StreamInfo.js"></script>
