--- a/Hyddan.html
+++ b/Hyddan.html
@@ -66,6 +66,7 @@
     <script src="src/streaming/models/ProtectionModel_3Feb2014.js"></script>
     <script src="src/streaming/models/ProtectionModel_28Aug2014.js"></script>
     <script src="src/streaming/models/ProtectionModel_10Dec2014.js"></script>
+    <script src="src/streaming/models/ProtectionModel_21Jan2015.js"></script>
     <script src="src/streaming/vo/protection/ClearKeyKeySet.js"></script>
     <script src="src/streaming/vo/protection/KeyPair.js"></script>
     <script src="src/streaming/vo/protection/SessionToken.js"></script>
@@ -86,6 +87,9 @@
     <script src="src/streaming/vo/protection/LicenseRequestComplete.js"></script>
     <script src="src/streaming/vo/protection/NeedKey.js"></script>
     <script src="src/streaming/vo/protection/ProtectionData.js"></script>
+    <script src="src/streaming/vo/protection/KeySystemAccess.js"></script>
+    <script src="src/streaming/vo/protection/KeySystemConfiguration.js"></script>
+    <script src="src/streaming/vo/protection/MediaCapability.js"></script>
 
     <!--Rules-->
     <script src="src/streaming/rules/SwitchRequest.js"></script>
