--- a/Hyddan.html
+++ b/Hyddan.html
@@ -27,6 +27,7 @@
     <script src="src/streaming/utils/Capabilities.js"></script>
     <script src="src/streaming/utils/EventBus.js"></script>
     <script src="src/streaming/utils/Debug.js"></script>
+    <script src="src/streaming/utils/CustomTimeRanges.js"></script>
     <script src="src/streaming/extensions/RequestModifierExtensions.js"></script>
     <script src="src/streaming/models/VideoModel.js"></script>
     <script src="src/streaming/vo/FragmentRequest.js"></script>
@@ -96,8 +97,6 @@
     <script src="src/streaming/rules/RulesContext.js"></script>
     <script src="src/streaming/rules/RulesController.js"></script>
 
-    <script src="src/streaming/rules/ABRRules/ArkenaSwitchingRule.js"></script>
-    <script src="src/streaming/rules/ABRRules/DownloadRatioRule.js"></script>
     <script src="src/streaming/rules/ABRRules/InsufficientBufferRule.js"></script>
     <script src="src/streaming/rules/ABRRules/LimitSwitchesRule.js"></script>
     <script src="src/streaming/rules/ABRRules/ABRRulesCollection.js"></script>
@@ -191,10 +190,7 @@
                                 source: Hyddan.Utils.getQueryStringParameter('url') || 'http://localhost/Playground/Dash/Manifest.mpd'
                             })
                             .volume(0.1)
-                            .play()
-                            .rules([
-                                new MediaPlayer.rules.ArkenaSwitchingRule()
-                            ]);
+                            .play();
         };
     </script>
     <body onload="init()">
